--- a/PrimerParcial/Capa_Presentacion/Capa_Presentacion.csproj
+++ b/PrimerParcial/Capa_Presentacion/Capa_Presentacion.csproj
@@ -78,6 +78,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="pruebadesonido.resx">
+      <DependentUpon>pruebadesonido.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
