--- a/PrimerParcial/Capa_Presentacion/Capa_Presentacion.csproj
+++ b/PrimerParcial/Capa_Presentacion/Capa_Presentacion.csproj
@@ -66,6 +66,12 @@
     <Compile Include="pruebadesonido.Designer.cs">
       <DependentUpon>pruebadesonido.cs</DependentUpon>
     </Compile>
+    <Compile Include="usuarios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="usuarios.Designer.cs">
+      <DependentUpon>usuarios.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
