--- a/PrimerParcial/Capa_Presentacion/Capa_Presentacion.csproj
+++ b/PrimerParcial/Capa_Presentacion/Capa_Presentacion.csproj
@@ -58,6 +58,12 @@
     <Compile Include="FrmEmpleados.Designer.cs">
       <DependentUpon>FrmEmpleados.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmEstaciones.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmEstaciones.Designer.cs">
+      <DependentUpon>FrmEstaciones.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="pruebadesonido.cs">
@@ -74,6 +80,9 @@
     </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmEstaciones.resx">
+      <DependentUpon>FrmEstaciones.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
